@@ -671,6 +671,10 @@ namespace libtorrent
 		void write_resume_data(entry& rd) const;
 		void read_resume_data(lazy_entry const& rd);
 
+		void seen_complete() { m_last_seen_complete = time(0); }
+		int time_since_complete() const { return time(0) - m_last_seen_complete; }
+		time_t last_seen_complete() const { return m_last_seen_complete; }
+
 		// LOGGING
 #if defined TORRENT_VERBOSE_LOGGING || defined TORRENT_LOGGING || defined TORRENT_ERROR_LOGGING
 		virtual void debug_log(const std::string& line);
@@ -974,6 +978,7 @@ namespace libtorrent
 		// completed, m_completed_time is 0
 		time_t m_added_time;
 		time_t m_completed_time;
+		time_t m_last_seen_complete;
 
 		// ==============================
 		// The following members are specifically
